    in debian/rules, the upstream install target gets it right
  * Use debian/clean instead of removing left-behind files by hand in the
    clean target
  * Convert debian/rules to dh(1).
  * Don't run debconf-updatepo on clean; not worth the divergence in
    debian/rules anymore :)
  * Don't install debian/README.build in the package; this is really only
    relevant in the source.

 -- Steve Langasek <vorlon@debian.org>  Sat, 24 Sep 2011 13:36:50 -0700

samba (2:3.5.11~dfsg-1) unstable; urgency=low

  * New upstream release

 -- Christian Perrier <bubulle@debian.org>  Fri, 05 Aug 2011 20:12:01 +0200

samba (2:3.5.10~dfsg-1) unstable; urgency=low

  * New upstream release
  * Security update, fixing the following issues:
    - CVE-2011-2694: possible XSS attack in SWAT
    - CVE-2011-2522: Cross-Site Request Forgery vulnerability in SWAT

 -- Christian Perrier <bubulle@debian.org>  Thu, 28 Jul 2011 12:19:01 +0200

samba (2:3.5.9~dfsg-1) unstable; urgency=low

  * New upstream release
  * Add "--quiet" to start-stop-daemon call in reload target in init
    script. Closes: #572483
  * Add examples/LDAP in examples for the samba package. With this,
    samba.schema will be provided in some way in the package.
    This very partially addresses #190162
  * patches/bug_221618_precise-64bit-prototype.patch: precise
    64bits prototype in libsmbclient-dev. Closes: #221618
  * patches/no-unnecessary-cups.patch: dropped after upstream
    changes to printing code
  * Update Standards to 3.9.2 (checked, no change)
  * Add build-arch and build-indep targets in debian/rules

 -- Christian Perrier <bubulle@debian.org>  Sat, 18 Jun 2011 07:08:00 +0200

samba (2:3.5.8~dfsg-5) unstable; urgency=low

  * Fix "tdb2.so undefined symbol: dyn_get_STATEDIR" by fixing a typo
    in fhs-filespath.patch. Closes: #629183, LP: #789097

 -- Christian Perrier <bubulle@debian.org>  Sat, 04 Jun 2011 13:48:32 +0200

samba (2:3.5.8~dfsg-4) unstable; urgency=low

  [ Debconf translations ]