@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Debian Samba Maintainers <pkg-samba-maint@lists.alioth.debian.org>
 Uploaders: Steve Langasek <vorlon@debian.org>, Christian Perrier <bubulle@debian.org>, Noèl Köthe <noel@debian.org>, Jelmer Vernooij <jelmer@debian.org>
-Build-Depends: debhelper (>= 6.0.7~), libpam0g-dev, libreadline-dev,
+Build-Depends: debhelper (>= 8.1.3~), libpam0g-dev, libreadline-dev,
 	libcups2-dev | libcupsys2-dev,
 	libacl1-dev [linux-any],
 	libkrb5-dev, libldap2-dev, po-debconf, libpopt-dev, uuid-dev,
@@ -140,6 +140,7 @@ Package: libpam-smbpass
 Section: admin
 Priority: extra
 Architecture: any
+Multi-Arch: same
 Depends: ${shlibs:Depends}, samba-common (= ${source:Version}), ${misc:Depends},
 	 libpam-runtime (>= 1.0.1-6)
 Suggests: samba
@@ -155,6 +156,8 @@ Package: libsmbclient
 Section: libs
 Priority: optional
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: shared library for communication with SMB/CIFS servers
  This package provides a shared library that enables client applications
@@ -176,7 +179,8 @@ Package: winbind
 Section: net
 Priority: optional
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libwbclient0 (= ${binary:Version}), samba-common (= ${source:Version}), lsb-base (>= 3.0-6), adduser, libpam-runtime (>= 1.0.1-6)
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libwbclient0 (= ${binary:Version}), samba-common (= ${source:Version}), lsb-base (>= 3.0-6), adduser, libpam-runtime (>= 1.0.1-6), libpam0g (>= 1.1.3-2~)
 Replaces: samba (<= 2.2.3-2)
 Description: Samba nameservice integration server
  Samba is an implementation of the SMB/CIFS protocol for Unix systems,
@@ -209,6 +213,8 @@ Package: libwbclient0
 Section: libs
 Priority: optional
 Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Breaks:
  libpam-smbpass (<< 2:3.4.1),
