@@ -1,3 +1,3 @@
-usr/lib/samba/libsmbclient.a usr/lib
-usr/lib/samba/libsmbclient.so usr/lib
+usr/lib/*/libsmbclient.a
+usr/lib/*/libsmbclient.so
 usr/include/libsmbclient.h
