@@ -1,2 +1,2 @@
-usr/lib/samba/libsmbclient.so.0 usr/lib
+usr/lib/*/libsmbclient.so.0
 usr/share/man/man7/libsmbclient.7
