@@ -1,3 +1,3 @@
-usr/lib/samba/libwbclient.so usr/lib
+usr/lib/*/libwbclient.so
 usr/include/wbclient.h
 usr/include/wbc_async.h
